--- a/notebooks/MedSAM2_inference_CT_Lesion.ipynb
+++ b/notebooks/MedSAM2_inference_CT_Lesion.ipynb
@@ -381,7 +381,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -395,7 +395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
